--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,12 +107,14 @@ header{
   width: 100%;
   text-align: center;
   border: 1px solid rgb(140,140,140);
+  transition: opacity 750ms ease-in-out;
 }
 
 #content{
   width: 100%;
   padding: 10px;
   border: 1px solid rgb(140,140,140);
+  transition: opacity 750ms ease-in-out;
 }
 
 .send-btn{
@@ -181,7 +183,7 @@ header{
 }
 
 .hidden2{
-  z-index: 3;
+  opacity: 0.0;
 }
 
 @media only screen and (max-width: 800px){
