--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,6 +101,11 @@ header{
   z-index: 2;
 }
 
+.post-form{
+  height: 50px;
+  transition: height 750ms ease-in-out;
+}
+
 #title{
   margin: 0 0 10px 0;
   padding: 10px;
